TEST_PROGRAMS/INVALID/Olivier_Melancon/while_syntax.min
var x: float;

x = 1.;

while x do
	print "Hello World";
# That is subtle, we might want to allow this
done;
